Update 103.7 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.7 Search text files using regular expressions/103.7 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.7 Search text files using regular expressions/103.7 Lesson 1.md
@@ -10,4 +10,28 @@
 
 # Введение
 
-Алгоритмы поиска строк широко используются в нескольких задачах обработки данных, настолько, что у Unix-подобных операционных систем есть собственная повсеместная реализация: регулярные выражения, часто сокращаемые до RE. Регулярные выражения состоят из последовательностей символов, составляющих общий шаблон, используемый для поиска и иногда изменения соответствующей последовательности в более крупной строке символов. Регулярные выражения значительно расширяют возможности: Пишите правила парсинга для запросов на HTTP-серверах, в частности, в nginx. Напишите сценарии, преобразующие текстовые наборы данных в другой формат. Ищите интересующие вас вхождения в журнальных записях или документах. Фильтруйте разметку документов, сохраняя семантическое содержание. Самое простое регулярное выражение содержит хотя бы один атом. Атом, названный так потому, что он является основным элементом регулярного выражения, - это просто символ, который может иметь или не иметь особое значение. Большинство обычных символов однозначны, они сохраняют свое буквальное значение, в то время как другие имеют особое значение: . (точка) Атом соответствует любому символу. ^ (каретка) Атом совпадает с началом строки. $ (знак доллара) Атом соответствует концу строки. Например, регулярное выражение bc, составленное из буквальных атомов b и c, можно найти в строке abcd, но не в строке a1cd. С другой стороны, регулярное выражение .c можно найти в обеих строках abcd и a1cd в виде точки. соответствует любому символу. Атомы со знаком каретки и доллара используются, когда интерес представляют только совпадения в начале или в конце строки. По этой причине их еще называют якорями. Например, cd можно найти в abcd, а ^ cd - нет. Точно так же ab можно найти в abcd, а ab $ - нет. Каретка ^ - это буквальный символ, кроме тех случаев, когда он стоит в начале, а $ - буквальный символ, кроме тех случаев, когда он находится в конце регулярного выражения.
+Алгоритмы поиска строк широко используются во многих задачах обработки данных, настолько, что у Unix-подобных операционных систем есть собственная повсеместная реализация: *регулярные выражения*, часто сокращаемые до *RE*. Регулярные выражения состоят из последовательностей символов, составляющих общий шаблон, используемый для поиска и иногда изменения соответствующей последовательности в более крупной строке символов. Регулярные выражения значительно расширяют возможности: 
+
+* Написания правил парсинга для запросов на HTTP-серверах, в частности, в *nginx*. 
+* Написания скриптов, преобразующих текстовые наборы данных в другой формат. 
+* Посике интересующих вас вхождений в журнальных записях или документах. 
+* Фильтрации разметки документов, сохраняя семантическое содержание. 
+
+Самое простое регулярное выражение содержит хотя бы один *атом*. Атом, названный так потому, что он является основным элементом регулярного выражения, - это просто символ, который может иметь или не иметь особое значение. Большинство обычных символов однозначны, они сохраняют свое буквальное значение, в то время как другие имеют особое значение: 
+
+`.` (точка)  
+Атом соответствует любому символу. 
+
+`^` (каретка)  
+Атом совпадает с началом строки. 
+
+`$` (знак доллара)  
+Атом соответствует концу строки. 
+
+Например, регулярное выражение `bc`, составленное из буквальных атомов `b` и `c`, можно найти в строке `abcd`, но не в строке `a1cd`. С другой стороны, регулярное выражение `.c` можно найти в обеих строках `abcd` и `a1cd` в виде точки `.` соответствует любому символу. 
+
+Атомы со знаком каретки и доллара используются, когда интерес представляют только совпадения в начале или в конце строки. По этой причине их еще называют якорями. Например, `cd` можно найти в `abcd`, а `^ cd` - нет. Точно так же `ab` можно найти в `abcd`, а `ab$` - нет. Каретка `^` - это буквальный символ, кроме тех случаев, когда он стоит в начале, а `$` - буквальный символ, кроме тех случаев, когда он находится в конце регулярного выражения.
+
+
+## Выражение в скобках
+
