Update 103.7 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.7 Search text files using regular expressions/103.7 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.7 Search text files using regular expressions/103.7 Lesson 1.md
@@ -1,4 +1,4 @@
-# 103.6 Урок 1
+# 103.7 Урок 1
 
 | **Сертификат:** | LPIC-1                                      |
 |:----------------|:--------------------------------------------|
@@ -35,3 +35,63 @@
 
 ## Выражение в скобках
 
+Есть еще один тип атома - *выражение в скобках*. Хотя это не один символ, квадратные скобки `[]` (включая их содержимое) считаются одним атомом. Выражение в квадратных скобках обычно представляет собой просто список буквальных символов, заключенных в `[]`, благодаря чему атом соответствует любому одиночному символу из списка. Например, выражение `[1b]` можно найти в обеих строках `abcd` и `a1cd`. Чтобы указать символы, которым не должен соответствовать атом, список должен начинаться с символа `^`, как в `[^1b]`. Также можно указать диапазоны символов в выражениях в квадратных скобках. Например, `[0-9]` соответствует цифрам от `0` до `9`, а `[a-z]` соответствует любой строчной букве. Диапазоны следует использовать с осторожностью, поскольку они могут не совпадать в разных регионах. 
+
+Списки выражений в квадратных скобках также принимают классы, а не только отдельные символы и диапазоны. Традиционные классы символов: 
+
+`[: alnum:]`  
+Представляет буквенно-цифровой символ. 
+
+`[:alpha:]`  
+Представляет собой буквенный символ. 
+
+`[:ascii:]`  
+Представляет символ, который соответствует набору символов ASCII. 
+
+`[:empty:]`  
+Представляет пробел, то есть пробел или табуляцию. 
+
+`[:cntrl:]`  
+Представляет управляющий символ. 
+
+`[:digit:]`  
+Представляет собой цифру (от 0 до 9). 
+
+`[:graph:]`  
+Представляет любой печатный символ, кроме пробела. 
+
+`[:lower:]`  
+Представляет символ нижнего регистра. 
+
+`[:print:]`  
+Представляет любой печатный символ, включая пробел. 
+
+`[:punct:]`  
+Представляет любой печатаемый символ, не являющийся пробелом или буквенно-цифровым символом. 
+
+`[:space:]`  
+Представляет символы пробела: пробел, перевод страницы (`\f`), новая строка (`\n`), возврат каретки (`\r`), горизонтальная табуляция (`\t`) и вертикальная табуляция (`\v`). 
+
+`[:upper:]`  
+Представляет заглавную букву. 
+
+`[:xdigit:]`  
+Представляет шестнадцатеричные цифры (от 0 до F). 
+
+Классы символов можно комбинировать с отдельными символами и диапазонами, но нельзя использовать в качестве конечной точки диапазона. Кроме того, классы символов могут использоваться только в выражениях в квадратных скобках, а не как независимый атом вне скобок.
+
+
+## Квантификаторы
+
+Досягаемость атома, будь то атом с одним символом или атом в скобках, можно настроить с помощью квантификатора *атома*. Квантификаторы атома определяют последовательности атомов, то есть совпадения происходят, когда в строке обнаруживается непрерывное повторение атома. Подстрока, соответствующая совпадению, называется *куском*. Тем не менее, квантификаторы и другие особенности регулярных выражений обрабатываются по-разному в зависимости от того, какой стандарт используется. 
+
+Согласно определению POSIX, существует две формы регулярных выражений: «базовые» регулярные выражения и «расширенные» регулярные выражения. Большинство текстовых программ в любом стандартном дистрибутиве Linux поддерживают обе формы, поэтому важно знать их различия, чтобы избежать проблем совместимости и выбрать наиболее подходящую реализацию для предполагаемой задачи. 
+
+Квантификатор `*` выполняет одну и ту же функцию как в базовом, так и в расширенном RE (атом встречается ноль или более раз) и является буквальным символом, если он появляется в начале регулярного выражения или если ему предшествует обратная косая черта `\`. Квантификатор со знаком `+` выберет части, содержащие один или несколько совпадений атомов в последовательности. С вопросительным знаком квантификатора? Совпадение будет происходить, если соответствующий атом появится один раз или если он не появится вообще. Если перед ними стоит обратная косая черта `\`, их особое значение не рассматривается. Базовые регулярные выражения также поддерживают `+` и `?` кванторы, но перед ними должна стоять обратная косая черта. В отличие от расширенных регулярных выражений, `+` и `?` сами по себе являются буквальными символами в основных регулярных выражениях.
+
+
+## Границы
+
+*Граница* - это квантор атома, который, как следует из названия, позволяет пользователю указать точные границы количества для атома. В расширенных регулярных выражениях граница может иметь три формы: 
+
+`{i}` Атом должен появиться ровно i раз (i целое число). Например, [[: blank:]] {2} соответствует ровно двум пустым символам. {я,} Атом должен появиться не менее i раз (i целое число). Например, [[: blank:]] {2,} соответствует любой последовательности из двух или более пустых символов. {i, j} Атом должен появляться не менее i раз и не более j раз (i и j целые числа, j больше i). Например, xyz {2,4} соответствует строке xy, за которой следуют два-четыре символа z. В любом случае, если подстрока соответствует регулярному выражению и более длинная подстрока, начинающаяся в той же точке, также совпадает, более длинная подстрока будет рассматриваться. Базовые регулярные выражения также поддерживают границы, но перед разделителями должны стоять \: \ {и \}. Сами по себе {и} интерпретируются как буквальные символы. \ {, За которым следует символ, отличный от цифры, является буквальным символом, а не началом границы.
