Update 103.7 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.7 Search text files using regular expressions/103.7 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.7 Search text files using regular expressions/103.7 Lesson 1.md
@@ -94,4 +94,74 @@
 
 *Граница* - это квантор атома, который, как следует из названия, позволяет пользователю указать точные границы количества для атома. В расширенных регулярных выражениях граница может иметь три формы: 
 
-`{i}` Атом должен появиться ровно i раз (i целое число). Например, [[: blank:]] {2} соответствует ровно двум пустым символам. {я,} Атом должен появиться не менее i раз (i целое число). Например, [[: blank:]] {2,} соответствует любой последовательности из двух или более пустых символов. {i, j} Атом должен появляться не менее i раз и не более j раз (i и j целые числа, j больше i). Например, xyz {2,4} соответствует строке xy, за которой следуют два-четыре символа z. В любом случае, если подстрока соответствует регулярному выражению и более длинная подстрока, начинающаяся в той же точке, также совпадает, более длинная подстрока будет рассматриваться. Базовые регулярные выражения также поддерживают границы, но перед разделителями должны стоять \: \ {и \}. Сами по себе {и} интерпретируются как буквальные символы. \ {, За которым следует символ, отличный от цифры, является буквальным символом, а не началом границы.
+`{i}`  
+Атом должен появиться ровно `i` раз (`i` целое число). Например, `[[:blank:]]{2}` соответствует ровно двум пустым символам. 
+
+`{i,}`  
+Атом должен появиться не менее `i` раз (`i` целое число). Например, `[[:blank:]]{2,}` соответствует любой последовательности из двух или более пустых символов. 
+
+`{i,j}`  
+Атом должен появляться не менее `i` раз и не более `j` раз (`i` и `j` целые числа, `j` больше `i`). Например, `xyz{2,4}` соответствует строке `xy`, за которой следуют два-четыре символа `z`. 
+
+В любом случае, если подстрока соответствует регулярному выражению и более длинная подстрока, начинающаяся в той же точке, также совпадает, более длинная подстрока будет рассматриваться. 
+
+Базовые регулярные выражения также поддерживают границы, но перед разделителями должны стоять `\`: `\{` и `\}`. Сами по себе `{and}` интерпретируются как буквальные символы. `\{`, за которым следует символ, отличный от цифры, является буквальным символом, а не началом границы.
+
+
+## Ветви и обратные ссылки
+
+Базовые регулярные выражения также отличаются от расширенных регулярных выражений еще одним важным аспектом: расширенное регулярное выражение может быть разделено на *ветви*, каждая из которых является независимым регулярным выражением. Ветви разделены `|` и комбинированное регулярное выражение будет соответствовать всему, что соответствует любой из ветвей. Например, `he|him` найдет совпадение, если в проверяемой строке будет найдена подстрока `he` или `him`. Интерпретация основных регулярных выражений `|` как буквальный символ. Однако большинство программ, поддерживающих базовые регулярные выражения, допускают переходы с `\|`. 
+
+Расширенное регулярное выражение, заключенное в `()`, может использоваться в *обратной ссылке*. Например, `([[:digit:]])\1` будет соответствовать любому регулярному выражению, которое повторяется хотя бы один раз, потому что `\1` в выражении - это обратная ссылка на фрагмент, сопоставленный с первым подвыражением в скобках. Если в регулярном выражении существует более одного подвыражения в скобках, на них можно ссылаться с помощью `\2`, `\3` и так далее. 
+
+Для базовых RE подвыражения должны быть заключены в `\(` и `\)`, с `(` и `)` сами по себе обычные символы. Индикатор обратной ссылки используется как в расширенных регулярных выражениях.
+
+
+## Поиск с помощью регулярных выражений
+
+Непосредственное преимущество регулярных выражений заключается в улучшении поиска в файловых системах и текстовых документах. Параметр `-regex` команды `find` позволяет проверять каждый путь в иерархии каталогов на соответствие регулярному выражению. Например,
+
+```console
+$ find $HOME -regex '.*/\..*' -size +100M
+```
+
+выполняет поиск файлов размером более 100 мегабайт (100 единиц по 1048576 байтов), но только в тех путях внутри домашнего каталога пользователя, которые действительно содержат совпадение с `.*/\..*`, то есть `/.` окруженный любым другим количеством символов. Другими словами, будут перечислены только скрытые файлы или файлы внутри скрытых каталогов, независимо от положения `/.` в соответствующем пути. Для регулярных выражений без учета регистра следует использовать параметр `-iregex`:
+
+```console
+$ find /usr/share/fonts -regextype posix-extended -iregex '.*(dejavu|liberation).*sans.*(italic|oblique).*'
+/usr/share/fonts/dejavu/DejaVuSansCondensed-BoldOblique.ttf
+/usr/share/fonts/dejavu/DejaVuSansCondensed-Oblique.ttf
+/usr/share/fonts/dejavu/DejaVuSans-BoldOblique.ttf
+/usr/share/fonts/dejavu/DejaVuSans-Oblique.ttf
+/usr/share/fonts/dejavu/DejaVuSansMono-BoldOblique.ttf
+/usr/share/fonts/dejavu/DejaVuSansMono-Oblique.ttf
+/usr/share/fonts/liberation/LiberationSans-BoldItalic.ttf
+/usr/share/fonts/liberation/LiberationSans-Italic.ttf
+```
+
+В этом примере регулярное выражение содержит ветви (написанные в расширенном стиле) для перечисления только определенных файлов шрифтов в иерархии каталогов `/usr/share/fonts`. Расширенные регулярные выражения не поддерживаются по умолчанию, но `find` позволяет включить их с помощью `-regextype posix-extended или -regextype egrep`. Стандарт RE по умолчанию для `find` - это *findutils-default*, который фактически является клоном базового регулярного выражения. 
+
+Часто бывает необходимо передать вывод программы команде `less`, если он не помещается на экране. `less` разделяет ввод на страницы, по одному экрану за раз, позволяя пользователю легко перемещаться по тексту вверх и вниз. Кроме того, `less` также позволяет пользователю выполнять поиск на основе регулярных выражений. Эта функция особенно важна, потому что для многих повседневных задач, таких как проверка записей журнала или просмотр справочных страниц, по умолчанию используется реже пагинатор. Например, при чтении справочной страницы нажатие клавиши <kbd>/</kbd> откроет запрос поиска. Это типичный сценарий, в котором полезны регулярные выражения, поскольку параметры команды перечислены сразу после поля страницы в общем макете страницы руководства. Однако один и тот же вариант может многократно появляться в тексте, что делает невозможным буквальный поиск. Независимо от этого, набрав `^[[:blank:]]*-o` - или проще: `^*-o` - в строке поиска, вы сразу же перейдете к параметру раздела `-o` (если он существует) после нажатия Enter, что позволит один, чтобы быстрее просмотреть описание опции.
+
+
+# Упражнения для закрепления
+
+
+
+
+# Упражнения на размышление
+
+
+
+
+# Резюме
+
+
+
+
+# Ответы на упражнения для закрепления
+
+
+
+
+# Ответы на упражнения для размышления
