Update 103.7 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.7 Search text files using regular expressions/103.7 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.7 Search text files using regular expressions/103.7 Lesson 1.md
@@ -146,12 +146,22 @@ $ find /usr/share/fonts -regextype posix-extended -iregex '.*(dejavu|liberation)
 
 # Упражнения для закрепления
 
+1. Какое расширенное регулярное выражение будет соответствовать любому адресу электронной почты, например `info@example.org`? 
 
+2. Какое расширенное регулярное выражение будет соответствовать любому IPv4-адресу только в стандартном формате с четырьмя точками, например `192.168.15.1`? 
+
+3. Как можно использовать команду `grep` для вывода списка содержимого файла `/etc/services`, отбрасывая все комментарии (строки, начинающиеся с `#`)? 
+
+4. Файл `domains.txt` содержит список доменных имен, по одному в каждой строке. Как использовать команду `egrep` для вывода списка только доменов `.org` или `.com`?
 
 
 # Упражнения на размышление
 
+1. Как из текущего каталога команда `find` могла бы использовать расширенное регулярное выражение для поиска всех файлов, не содержащих стандартный суффикс файла (например, имена файлов, не заканчивающиеся на `.txt` или `.c`)? 
 
+2. `less` - это средство разбиения на страницы по умолчанию для отображения длинных текстовых файлов в среде оболочки. Набрав `/`, можно ввести регулярное выражение в строку поиска, чтобы перейти к первому соответствующему совпадению. Какую комбинацию клавиш следует вводить в строке поиска, чтобы оставаться в текущей позиции документа и выделять только соответствующие совпадения? 
+
+3. В `less` как можно было бы фильтровать вывод, чтобы отображались только строки, соответствующие регулярному выражению?
 
 
 # Резюме
