Update 103.7 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.7 Search text files using regular expressions/103.7 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.7 Search text files using regular expressions/103.7 Lesson 1.md
@@ -8,7 +8,7 @@
 | **Урок:**       | 1 из 2                                      |
 
 
-# Введение
+## Введение
 
 Алгоритмы поиска строк широко используются во многих задачах обработки данных, настолько, что у Unix-подобных операционных систем есть собственная повсеместная реализация: *регулярные выражения*, часто сокращаемые до *RE*. Регулярные выражения состоят из последовательностей символов, составляющих общий шаблон, используемый для поиска и иногда изменения соответствующей последовательности в более крупной строке символов. Регулярные выражения значительно расширяют возможности: 
 
