--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.8 Basic file editing/103.8 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.8 Basic file editing/103.8 Lesson 1.md
@@ -10,4 +10,24 @@
 
 ## Введение
 
-В большинстве дистрибутивов Linux vi - аббревиатура от «visual» - предустановлен и является стандартным редактором в среде оболочки. Vi - это интерактивный текстовый редактор, он показывает содержимое файла на экране по мере его редактирования. Таким образом, он позволяет пользователю перемещаться и вносить изменения в любом месте документа. Однако, в отличие от визуальных редакторов с графического рабочего стола, редактор vi представляет собой приложение оболочки с сочетаниями клавиш для каждой задачи редактирования. Альтернатива vi, называемая vim (vi улучшенная), иногда используется как современная замена vi. Среди других улучшений vim предлагает поддержку подсветки синтаксиса, многоуровневой отмены / повтора и редактирования нескольких документов. Хотя vim более изобретателен, он полностью обратно совместим с vi, что делает их неразличимыми для большинства задач. Стандартный способ запустить vi - указать путь к файлу в качестве параметра. Чтобы перейти непосредственно к определенной строке, ее номер должен быть обозначен знаком плюса, как в vi +9 / etc / fstab, чтобы открыть / etc / fstab / и поместить курсор в 9-ю строку. Без числа знак плюса сам по себе помещает курсор в последнюю строку. Интерфейс vi очень прост: все пространство, доступное в окне терминала, занято для представления пользователю файла, обычно сообщаемого как аргумент команды. Единственные визуальные подсказки - это нижний колонтитул, показывающий текущее положение курсора, и тильда ~, указывающая, где заканчивается файл. Для vi существуют разные режимы выполнения, в которых поведение программы меняется. Наиболее распространены: режим вставки и нормальный режим.
+В большинстве дистрибутивов Linux `vi` - аббревиатура от «visual» - предустановлен и является стандартным редактором в среде оболочки. Vi - это интерактивный текстовый редактор, он показывает содержимое файла на экране по мере его редактирования. Таким образом, он позволяет пользователю перемещаться и вносить изменения в любом месте документа. Однако, в отличие от визуальных редакторов с графического рабочего стола, редактор `vi` представляет собой приложение оболочки с сочетаниями клавиш для каждой задачи редактирования. 
+
+Альтернатива `vi`, называемая `vim` (vi *усовершенствованный*), иногда используется как современная замена `vi`. Среди других улучшений `vim` предлагает поддержку подсветки синтаксиса, многоуровневой отмены/повтора и редактирования нескольких документов. Хотя `vim` более изобретателен, он полностью обратно совместим с `vi`, что делает их неразличимыми для большинства задач. 
+
+Стандартный способ запустить `vi` - указать путь к файлу в качестве параметра. Чтобы перейти непосредственно к определенной строке, ее номер должен быть обозначен знаком плюса, как в `vi +9 /etc/fstab`, чтобы открыть `/etc/fstab` и поместить курсор в 9-ю строку. Без числа знак плюса сам по себе помещает курсор в последнюю строку. 
+
+Интерфейс `vi` очень прост: все пространство, доступное в окне терминала, занято для представления пользователю файла, обычно сообщаемого как аргумент команды. Единственные визуальные подсказки - это нижний колонтитул, показывающий текущее положение курсора, и тильда `~`, указывающая, где заканчивается файл. Для `vi` существуют разные режимы выполнения, в которых поведение программы меняется. Наиболее распространены: *режим вставки* и *нормальный режим*.
+
+
+## Режим вставки
+
+Режим вставки прост: текст появляется на экране, когда он набирается на клавиатуре. Это тот тип взаимодействия, который большинство пользователей ожидают от текстового редактора, но это не то, как `vi` сначала представляет документ. Чтобы войти в режим вставки, пользователь должен выполнить команду вставки в обычном режиме. Клавиша <kbd>Esc</kbd> завершает режим вставки и возвращает в нормальный режим, режим `vi` по умолчанию.
+
+>Если вам интересно узнать больше о других режимах выполнения, откройте `vi` и введите:
+>```console
+>:help vim-modes-intro
+>```
+
+
+## Нормальный режим
+
