--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.8 Basic file editing/103.8 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.8 Basic file editing/103.8 Lesson 1.md
@@ -31,3 +31,167 @@
 
 ## Нормальный режим
 
+По умолчанию `vi` запускается в обычном режиме, также известном как командный режим. В этом режиме клавиши клавиатуры связаны с командами для задач навигации и обработки текста. Большинство команд в этом режиме - уникальные ключи. Некоторые клавиши и их функции в обычном режиме: 
+
+`0`, `$`  
+Перейти в начало и конец строки. 
+
+`1G`, `G`  
+Перейти в начало и конец документа. 
+
+`(`,`)`  
+Перейти к началу и концу предложения. 
+
+`{`,`}`  
+Перейти в начало и конец абзаца. 
+
+`w`, `W`  
+Перейти на слово и перейти на слово, включая знаки препинания. 
+
+`h`, `j`, `k`, `l`  
+Влево, вниз, вверх, вправо. 
+
+`e` или `E`  
+Перейти в конец текущего слова. 
+
+`/`, `?`  
+Искать вперед и назад. 
+
+`i`, `I`  
+Войти в режим вставки перед текущей позицией курсора и в начале текущей строки. 
+
+`a`, `A`  
+Войти в режим вставки после текущей позиции курсора и в конце текущей строки. 
+
+`o`, `O`  
+Добавить новую строку и войти в режим вставки в следующей или предыдущей строке. 
+
+`s`, `S`  
+Стереть символ под курсором или всю строку и войдите в режим вставки. 
+
+`c`  
+Изменить символ (символы) под курсором. 
+
+`р`  
+Заменить символ под курсором. 
+
+`x`  
+Удалить выбранные символы или символ под курсором. 
+
+`v`, `V`  
+Начать выделение с текущего символа или всей строки. 
+
+`y`, `yy`  
+Скопировать (выдернуть) символ (символы) или всю строку. 
+
+`p`, `P`  
+Вставить скопированный контент после или до текущей позиции. 
+
+`u`  
+Отменить последнее действие. 
+
+`Ctrl-R`  
+Повторить последнее действие. 
+
+`ZZ`  
+Закрыть и сохранить. 
+
+`ZQ`  
+Закрыть и не сохранять. 
+
+Если перед ней стоит число, команда будет выполняться одинаковое количество раз. Например, нажмите `3yy`, чтобы скопировать текущую строку плюс две следующие, нажмите `d5w`, чтобы удалить текущее слово и следующие `4` слова, и так далее. 
+
+Большинство задач редактирования представляют собой комбинации нескольких команд. Например, последовательность клавиш `vey` используется для копирования выделения, начиная с текущей позиции, до конца текущего слова. Повторение команд также можно использовать в комбинациях, поэтому `v3ey` будет копировать выделение, начиная с текущей позиции, до конца третьего слова оттуда. 
+
+`vi` может организовывать скопированный текст в регистры, что позволяет одновременно сохранять различное содержимое. Регистр задается символом, которому предшествует `"` и после создания он сохраняется до конца текущего сеанса. Последовательность клавиш `"` создает регистр, содержащий текущий выбор, который будет доступен через клавишу `l`. Затем в регистр `l` можно вставить `"lp`. 
+
+Существует также способ установить пользовательские метки в произвольных местах текста, что упрощает быстрое переключение между ними. Метки создаются нажатием клавиши `m`, а затем клавиши для адресации текущей позиции. После этого курсор вернется в отмеченное положение при нажатии `'`, а затем выбранной клавиши. 
+
+Любая последовательность клавиш может быть записана как макрос для будущего выполнения. Например, можно записать макрос, чтобы заключить выбранный текст в двойные кавычки. Сначала выбирается строка текста и нажимается клавиша `q`, а затем клавиша регистра, с которой ассоциируется макрос, например `d`. Строка записи `@d` появится в строке нижнего колонтитула, указывая на то, что запись включена. Предполагается, что какой-то текст уже выделен, поэтому первая команда - это `x`, чтобы удалить (и автоматически скопировать) выделенный текст. Клавиша `i` нажимается, чтобы вставить две двойные кавычки в текущую позицию, затем <kbd>Esc</kbd> возвращается в нормальный режим. Последняя команда - `P` для повторной вставки удаленного выделения непосредственно перед последней двойной кавычкой. Повторное нажатие `q` завершит запись. Теперь макрос, состоящий из последовательности клавиш `x`, `i`, `""`, <kbd>Esc</kbd> и `P`, будет выполняться каждый раз при нажатии клавиш `@d` в нормальном режиме, где `d` - регистровый ключ, связанный с макросом. 
+
+Однако макрос будет доступен только во время текущего сеанса. Чтобы макросы были постоянными, их нужно сохранить в файле конфигурации. Поскольку большинство современных дистрибутивов используют `vim` в качестве редактора, совместимого с `vi`, файл конфигурации пользователя - `~/.vimrc`. Внутри `~/.vimrc` строка `let @d = 'xi""P'` установит регистр `d` в последовательность клавиш внутри одинарных кавычек. Тот же регистр, который ранее был назначен макросу, можно использовать для вставки его последовательности клавиш.
+
+
+## Команды двоеточия
+
+Обычный режим также поддерживает другой набор команд `vi`: *команды двоеточия*. Команды с двоеточием, как следует из названия, выполняются после нажатия клавиши двоеточия <kbd>:</kbd> в обычном режиме. Команды с двоеточием позволяют пользователю выполнять поиск, сохранять, выходить, запускать команды оболочки, изменять настройки `vi` и т. д. Чтобы вернуться в нормальный режим, необходимо выполнить команду `:visual` или нажать клавишу Enter без какой-либо команды. Здесь указаны некоторые из наиболее распространенных команд с двоеточием (начальная буква не является частью команды):
+
+`:s/REGEX/TEXT/g`  
+Заменяет все вхождения регулярного выражения `REGEX` на `TEXT` в текущей строке. Он принимает тот же синтаксис команды `sed`, включая адреса. 
+
+`:!`  
+Выполните следующую команду оболочки. 
+
+`:quit` или `:q`  
+Выйти из программы. 
+
+`:quit!` или `:q!`  
+Выйти из программы без сохранения. 
+
+`:wq`  
+Сохранить и выйти. 
+
+`:exit` или `:x` или `:e`  
+Сохраните и выйдите, если необходимо. 
+
+`:visual`  
+Вернитесь в режим навигации. 
+
+Стандартная программа `vi` может выполнять большинство задач редактирования текста, но любой другой неграфический редактор может использоваться для редактирования текстовых файлов в среде оболочки.
+
+>У начинающих пользователей могут возникнуть трудности с одновременным запоминанием командных клавиш `vi`. В дистрибутивах, использующих `vim`, также есть команда `vimtutor`, которая использует сам `vim` для открытия пошагового руководства по основным действиям. Файл представляет собой редактируемую копию, которую можно использовать для отработки команд и постепенного привыкания к ним.
+
+
+## Альтернативные редакторы
+
+Пользователи, незнакомые с `vi`, могут столкнуться с трудностями при адаптации к нему, поскольку его работа не интуитивно понятна. Более простой альтернативой является GNU `nano`, небольшой текстовый редактор, который предлагает все основные функции редактирования текста, такие как отмена/повтор, раскраска синтаксиса, интерактивный поиск и замена, автоматический отступ, номера строк, завершение слов, блокировка файлов, файлы резервных копий и т. д. поддержка интернационализации. В отличие от `vi`, все нажатия клавиш просто вставляются в редактируемый документ. Команды в `nano` вводятся с помощью клавиши <kbd>Ctrl</kbd> или клавиши Meta (в зависимости от системы, Meta - это <kbd>Alt</kbd> или <kbd>⌘</kbd>). 
+
+`Ctrl-6` или `Meta-A`  
+Начать новый выбор. Также можно создать выделение, нажав Shift и перемещая курсор. 
+
+`Мета-6`  
+Скопируйте текущий выбор. 
+
+`Ctrl-K`  
+Вырезать текущий выбор. 
+
+`Ctrl-U`  
+Вставьте скопированный контент. 
+
+`Meta-U`  
+Отменить. 
+
+`Meta-E`  
+Повторить. 
+
+`Ctrl-\`  
+Заменить текст в выделении. 
+
+`Ctrl-T`  
+Начните сеанс проверки орфографии для документа или текущего выделения. 
+
+Emacs - еще один очень популярный текстовый редактор для среды оболочки. В то время как текст вставляется простым вводом, как в `nano`, навигация по документу осуществляется с помощью клавиатурных команд, как в `vi`. Emacs включает в себя множество функций, которые делают его больше, чем просто текстовый редактор. Это также IDE (*интегрированная среда разработки*), способная компилировать, запускать и тестировать программы. Emacs может быть настроен как клиент электронной почты, новостей или RSS, что делает его подлинным пакетом программ для повышения производительности. 
+
+Сама оболочка будет запускать текстовый редактор по умолчанию, обычно `vi`, каждый раз, когда это необходимо. Это имеет место, например, когда `crontab -e` выполняется для редактирования *cronjobs*. Bash использует переменные сеанса `VISUAL` или `EDITOR`, чтобы найти текстовый редактор по умолчанию для среды оболочки. Например, команда export `EDITOR=nano` определяет `nano` как текстовый редактор по умолчанию в текущем сеансе оболочки. Чтобы сделать это изменение постоянным во всех сеансах, команда должна быть включена в `~/.bash_profile`.
+
+
+# Упражнения для закрепления
+
+
+
+
+# Упражнения на размышление
+
+
+
+# Резюме
+
+
+
+
+# Ответы на упражнения для закрепления
+
+
+
+
+# Ответы на упражнения для размышления
